--- a/playbooks/roles/openvpn/templates/client-common.j2
+++ b/playbooks/roles/openvpn/templates/client-common.j2
@@ -6,6 +6,7 @@ nobind
 persist-key
 persist-tun
 remote-cert-tls server
+auth-user-pass
 verify-x509-name {{ openvpn_server_common_name.stdout }} name
 tls-version-min 1.2
 comp-lzo
