* Openconnect: enable PAM authentication

--- a/playbooks/roles/openconnect/templates/config.j2
+++ b/playbooks/roles/openconnect/templates/config.j2
@@ -1,4 +1,5 @@
-auth = "plain[passwd={{ ocserv_hashed_password_file }}]"
+#auth = "plain[passwd={{ ocserv_hashed_password_file }}]"
+auth = "pam"
 enable-auth = "certificate"
 tcp-port = {{ ocserv_port }}
 udp-port = {{ ocserv_port }}
