* Add cron job to create VPN users from MySQL.     * Enable shadowsocks control master.     * Allow shadowsocks port range     * Restrict SSH usage for VPN users.

--- a/playbooks/roles/rc-local/templates/rc.local.j2
+++ b/playbooks/roles/rc-local/templates/rc.local.j2
@@ -27,6 +27,10 @@
 ipsec setup start
 /etc/init.d/xl2tpd restart
 
+# Shadowsocks manager
+ss-manager --manager-address /var/run/ss.sock -c config.json --executable /usr/bin/ss-server
+
+ 
 echo 1 > /proc/sys/net/ipv4/ip_forward
 
 echo 0 | tee /proc/sys/net/ipv4/conf/*/*_redirects
