* run ss-master in background

--- a/playbooks/roles/rc-local/templates/rc.local.j2
+++ b/playbooks/roles/rc-local/templates/rc.local.j2
@@ -28,7 +28,7 @@ ipsec setup start
 /etc/init.d/xl2tpd restart
 
 # Shadowsocks manager
-ss-manager --manager-address /var/run/ss.sock -c /etc/shadowsocks-libev/config.json --executable /usr/bin/ss-server
+ss-manager --manager-address /var/run/ss.sock -c /etc/shadowsocks-libev/config.json --executable /usr/bin/ss-server &
 
  
 echo 1 > /proc/sys/net/ipv4/ip_forward
